Make sure the licence link is not covered by the menu bar.

--- a/redesign/css/main.css
+++ b/redesign/css/main.css
@@ -550,7 +550,7 @@ a:hover {
   text-decoration: underline;
 }
 .dialogue .licence-link {
-  margin-top: 35px;
+  margin: 35px 0 50px;
   text-align: center;
 }
 .info-box {
